--- a/invest_game/quiz/templates/quiz/question.html
+++ b/invest_game/quiz/templates/quiz/question.html
@@ -30,6 +30,7 @@
     <p>{{ question.lead }}</p>
   </div>
 
+  <!-- <form method="post" action="{% url 'answer_question' %}" id="answer_form"> -->
   <form method="post" action="{% url 'answer_question' %}" id="answer_form">
     {% csrf_token %}
     <label>
@@ -42,7 +43,7 @@
     </label>
 
     <label class="next_btn">
-      <input type="submit" id="submitButton" value="다음 문제" disabled />
+      <input type="submit" name="quest_n_btn" id="submitButton" value="다음 문제" disabled />
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="9"
@@ -60,6 +61,23 @@
     </label>
   </form>
 </section>
+
+<form method="post" action="{% url 'answer_question' %}" id="dict_word_re">
+  {% csrf_token %}
+  <input type="text" name="user_input" />
+  <input type="submit" name="dict_n_btn" id="dict_btn" value="검색"  />
+</form>
+
+{% if results %}
+    <h2>검색 결과:</h2>
+    <ul>
+        {% for definition in results %}
+            <li>{{ definition }}</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>결과가 없습니다.</p>
+{% endif %}
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
