--- a/invest_game/static/scss/mo_quiz.css
+++ b/invest_game/static/scss/mo_quiz.css
@@ -64,19 +64,23 @@
     font-weight: 700;
     position: relative; }
     .quiz_frame .head svg {
+      width: 10px;
       margin-right: 4px; }
     .quiz_frame .head p {
       position: absolute;
       left: 50%;
       transform: translateX(-50%); }
-    .quiz_frame .head button {
+    .quiz_frame .head a {
       width: 70px;
       height: 30px;
       border-radius: 20px;
       background: #ffd66c;
       font-size: 16px;
       color: #000;
-      font-family: Suez One; }
+      font-family: Suez One;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
   .quiz_frame .content {
     width: calc(100% - 40px);
     min-height: 250px;
