--- a/invest_game/quiz/static/scss/mo_quiz.scss
+++ b/invest_game/quiz/static/scss/mo_quiz.scss
@@ -384,4 +384,47 @@
       background: rgba(0, 0, 0, 0.7);
     }
   }
+
+
+  .hint_word {
+    h5 {
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    }
+
+    .search_word {
+      width: 100%;
+      height: 40px;
+      margin-top: 20px;
+
+      form {
+        width: 94%;
+        height: 40px;
+        padding: 0 3%;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        border-bottom: 2px solid #000;
+      }
+      
+      input[type=text] {
+        width: calc(100% - 100px);
+        height: 30px;
+        background: none;
+        border: none;
+      }
+
+      input[type=submit]{
+        width: 50px;
+        font-size: 16px;
+        font-weight: 700;
+        background: none;
+        border: none;
+      }
+
+    }
+  }
 }
