--- a/invest_game/static/scss/mo_quiz.css
+++ b/invest_game/static/scss/mo_quiz.css
@@ -273,6 +273,33 @@
     #modal .modal_bg {
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.7); } }
+      background: rgba(0, 0, 0, 0.7); }
+  .hint_word h5 {
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center; }
+  .hint_word .search_word {
+    width: 100%;
+    height: 40px;
+    margin-top: 20px; }
+    .hint_word .search_word form {
+      width: 94%;
+      height: 40px;
+      padding: 0 3%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 2px solid #000; }
+    .hint_word .search_word input[type=text] {
+      width: calc(100% - 100px);
+      height: 30px;
+      background: none;
+      border: none; }
+    .hint_word .search_word input[type=submit] {
+      width: 50px;
+      font-size: 16px;
+      font-weight: 700;
+      background: none;
+      border: none; } }
 
 /*# sourceMappingURL=mo_quiz.css.map */
