--- a/invest_game/quiz/static/scss/mo_quiz.scss
+++ b/invest_game/quiz/static/scss/mo_quiz.scss
@@ -387,6 +387,10 @@
 
 
   .hint_word {
+    background-color: #fff;
+    padding: 30px 20px;
+    border-radius: 30px;
+
     h5 {
     font-size: 20px;
     font-weight: 700;
@@ -396,7 +400,8 @@
     .search_word {
       width: 100%;
       height: 40px;
-      margin-top: 20px;
+      margin-top: 30px;
+      
 
       form {
         width: 94%;
@@ -406,14 +411,21 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 2px solid #000;
+        border: 1px solid #aaa;
+        border-radius: 10px;
       }
       
       input[type=text] {
-        width: calc(100% - 100px);
+        width: calc(100% - 80px);
         height: 30px;
         background: none;
         border: none;
+
+        font-size: 14px;
+
+        &:focus{
+          outline: none;
+        }
       }
 
       input[type=submit]{
@@ -422,8 +434,57 @@
         font-weight: 700;
         background: none;
         border: none;
+
+        color: #004235;
       }
 
+    }
+
+    .word_result {
+      width: calc(100% - 40px);
+      min-height: 120px;
+
+      margin-top: 20px;
+      padding: 20px;
+      background:#f0f0f0;
+
+      border-radius: 20px;
+
+      h3 {
+        font-size: 14px;
+        font-weight: 700;
+
+        margin-bottom: 12px;
+      }
+
+      p{
+        font-size: 16px;
+        color: #000;
+        margin-bottom: 10px;
+      }
+
+      ul li {
+        color: #000;
+        font-size: 16px;
+      }
+    }
+
+    .close {
+      width: 120px;
+      height: 40px;
+      background-color: #004235;
+      color: #fff;
+      font-weight: 700;
+      border-radius: 10px;
+      margin: 20px auto 0 auto;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      a {
+        color: #fff;
+      }
     }
   }
 }
