--- a/invest_game/static/scss/mo_quiz.css
+++ b/invest_game/static/scss/mo_quiz.css
@@ -274,32 +274,72 @@
       width: 100vw;
       height: 100vh;
       background: rgba(0, 0, 0, 0.7); }
-  .hint_word h5 {
-    font-size: 20px;
-    font-weight: 700;
-    text-align: center; }
-  .hint_word .search_word {
-    width: 100%;
-    height: 40px;
-    margin-top: 20px; }
-    .hint_word .search_word form {
-      width: 94%;
-      height: 40px;
-      padding: 0 3%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 2px solid #000; }
-    .hint_word .search_word input[type=text] {
-      width: calc(100% - 100px);
-      height: 30px;
-      background: none;
-      border: none; }
-    .hint_word .search_word input[type=submit] {
-      width: 50px;
-      font-size: 16px;
+  .hint_word {
+    background-color: #fff;
+    padding: 30px 20px;
+    border-radius: 30px; }
+    .hint_word h5 {
+      font-size: 20px;
       font-weight: 700;
-      background: none;
-      border: none; } }
+      text-align: center; }
+    .hint_word .search_word {
+      width: 100%;
+      height: 40px;
+      margin-top: 30px; }
+      .hint_word .search_word form {
+        width: 94%;
+        height: 40px;
+        padding: 0 3%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border: 1px solid #aaa;
+        border-radius: 10px; }
+      .hint_word .search_word input[type=text] {
+        width: calc(100% - 80px);
+        height: 30px;
+        background: none;
+        border: none;
+        font-size: 14px; }
+        .hint_word .search_word input[type=text]:focus {
+          outline: none; }
+      .hint_word .search_word input[type=submit] {
+        width: 50px;
+        font-size: 16px;
+        font-weight: 700;
+        background: none;
+        border: none;
+        color: #004235; }
+    .hint_word .word_result {
+      width: calc(100% - 40px);
+      min-height: 120px;
+      margin-top: 20px;
+      padding: 20px;
+      background: #f0f0f0;
+      border-radius: 20px; }
+      .hint_word .word_result h3 {
+        font-size: 14px;
+        font-weight: 700;
+        margin-bottom: 12px; }
+      .hint_word .word_result p {
+        font-size: 16px;
+        color: #000;
+        margin-bottom: 10px; }
+      .hint_word .word_result ul li {
+        color: #000;
+        font-size: 16px; }
+    .hint_word .close {
+      width: 120px;
+      height: 40px;
+      background-color: #004235;
+      color: #fff;
+      font-weight: 700;
+      border-radius: 10px;
+      margin: 20px auto 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .hint_word .close a {
+        color: #fff; } }
 
 /*# sourceMappingURL=mo_quiz.css.map */
