--- a/invest_game/static/scss/mo_quiz.css
+++ b/invest_game/static/scss/mo_quiz.css
@@ -176,7 +176,7 @@
         justify-content: space-between;
         align-items: center; }
         .rank .rank_form #rankForm div {
-          width: calc(100% - 120px);
+          width: calc(100% - 90px);
           display: flex;
           justify-self: start;
           align-items: center; }
@@ -186,16 +186,16 @@
             text-align: left; }
           .rank .rank_form #rankForm div input {
             font-size: 16px;
-            margin-left: 10px;
             border: none;
             height: 30px;
-            width: calc(100% - 50px); }
+            width: calc(100% - 80px); }
         .rank .rank_form #rankForm button {
-          width: 100px;
+          width: 85px;
           background-color: #888;
           color: #fff;
           height: 30px;
-          border-radius: 12px; }
+          border-radius: 12px;
+          font-size: 14px; }
     .rank h2 {
       font-size: 20px;
       border-bottom: 1px solid #000;
